# eijiro-to-sqlite

./: .gitignore  Dockerfile  LICENSE  README.md  cspell.json  e2s.html  index.html  mise.toml  parse_eijiro_to_sqlite.py  parse_to_sqliteDB.py  pyproject.toml  search.js  setup.cfg
.github/instructions/: common.md  review.md  test.md
.github/workflows/: style-check.yml
e2s/: __init__.py  main.html  main.py  parse_eijiro_to_sqlite.py
tests/: test_e2s.py
