[metadata]
name = e2s
version = attr: e2s.__init__.__version__
description = Convert eijiro text data into sqlite3
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
url = https://github.com/eggplants/eijiro-to-sqlite
author = eggplants
author_email = w10776e8w@yahoo.co.jp
classifiers =
    Development Status :: 3 - Alpha

[options]
python_requires= >= 3.7
packages = find:
include_package_data = True

[options.package_data]
e2s = py.typed

[options.entry_points]
console_scripts =
    e2s = e2s.parse_eijiro_to_sqlite:main

[options.extras_require]
dev =
    black>=21.12b0
    flake8>=4.0.1
    isort>=5.10.1
    mypy>=0.931
    types-setuptools>=57.4.7

[isort]
profile = black

[flake8]
# E501: line too long
ignore = E501
indent-size = 4

[mypy]
python_version = 3.9
pretty = True
strict = True
